# Jarvis-Engine

./: .gitignore  install.sh  pyproject.toml
.cursor/plans/: autonomous_extraction_pipeline_3da5af9b.plan.md  brain_dump_multi-intent_extraction_75316b3c.plan.md  control_policy_implementation_35f8055b.plan.md  deadline-based_horizon_7cc22685.plan.md  habit_application_and_intent_collision_fix_ca2bc2bf.plan.md  habit_deletion_and_provenance_3d8414eb.plan.md  jarvis_backend_setup_4b776a46.plan.md  litellm_hybrid_router_e31db90a.plan.md  multi-day_safeguards_and_thinking_process_19b2ee1f.plan.md  phase_2_deterministic_scheduler_01b63670.plan.md  phase_3_context_ingestion_309c7795.plan.md  recurring_habits_temporal_intelligence_2cd0f4c3.plan.md  sarimax_engine_response_fix_9de63e81.plan.md  socratic_task_chunker_ece6268c.plan.md
app/: __init__.py  main.py
app/api/v1/: router.py
app/core/: config.py
app/core/or_tools/: __init__.py  constraints.py  solver.py
app/core/psychology/: __init__.py  pacing.py  woop.py
app/db/: __init__.py  supabase_py.py
app/db/migrations/: 001_pending_calendar_and_behavioral.sql  002_habit_recurrence_and_validity.sql  003_habit_trackers.sql  004_user_tasks_and_task_materials.sql  005_user_calendar_anchors.sql  README.md
app/models/: __init__.py
app/models/analytical/: __init__.py  dkt_lstm.py  dqn_rl.py
app/schemas/: __init__.py  context.py
app/services/: __init__.py
app/utils/: deadline_parser.py  docling_helper.py  metrics.py
docs/: POLICY_ENGINE_ARCHITECTURE.md
tests/: test_chunker.py  test_scheduler.py
(+25 files in other folders)
