[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-engine"
version = "0.1.0"
description = "Jarvis AI Productivity Backend - 9-Layer Agentic RAG Stack"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "mlx>=0.18.0",
    "mlx-lm>=0.14.0",
    "litellm>=1.0.0",
    "ortools>=9.8.0",
    "torch>=2.1.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "pandas>=2.0.0",
    "statsmodels>=0.14.0",
    "docling>=2.0.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]
vector = [
    "chromadb>=0.4.0",
    "qdrant-client>=1.7.0",
]
eval = [
    "ragas>=0.1.0",
    "deepeval>=0.20.0",
]
guardrails = [
    "guardrails-ai>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
